RESOLVED FIXED286489
REGRESSION(289119@main)[WPE]: Build broken on ARM 32-bits
https://bugs.webkit.org/show_bug.cgi?id=286489
Summary REGRESSION(289119@main)[WPE]: Build broken on ARM 32-bits
Carlos Alberto Lopez Perez
Reported 2025-01-24 10:57:39 PST
Since 289119@main the WPE build on ARM 32-bits is failing with: https://build.webkit.org/#/builders/893/builds/18867 FAILED: Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/FormatConverter.cpp.o /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp: In function ‘void WebCore::unpack(std::span<const CharacterTypeB>, std::span<DstType>, unsigned int) [with GraphicsContextGL::DataFormat format = WebCore::GraphicsContextGL::DataFormat::RGBA5551; SourceType = short unsigned int; DstType = unsigned char]’: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:257:52: error: cannot bind non-const lvalue reference of type ‘const uint16_t*&’ {aka ‘const short unsigned int*&’} to an rvalue of type ‘std::span<const short unsigned int>::pointer’ {aka ‘const short unsigned int*’} 257 | SIMD::unpackOneRowOfRGBA5551ToRGBA8(source.data(), destination.data(), pixelsPerRow); | ~~~~~~~~~~~^~ In file included from /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:36: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:172:67: note: initializing argument 1 of ‘void WebCore::SIMD::unpackOneRowOfRGBA5551ToRGBA8(const uint16_t*&, uint8_t*&, unsigned int&)’ 172 | ALWAYS_INLINE void unpackOneRowOfRGBA5551ToRGBA8(const uint16_t*& source, uint8_t*& destination, unsigned& pixelsPerRow) | ~~~~~~~~~~~~~~~~~^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp: In function ‘void WebCore::unpack(std::span<const CharacterTypeB>, std::span<DstType>, unsigned int) [with GraphicsContextGL::DataFormat format = WebCore::GraphicsContextGL::DataFormat::RGBA4444; SourceType = short unsigned int; DstType = unsigned char]’: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:276:52: error: cannot bind non-const lvalue reference of type ‘const uint16_t*&’ {aka ‘const short unsigned int*&’} to an rvalue of type ‘std::span<const short unsigned int>::pointer’ {aka ‘const short unsigned int*’} 276 | SIMD::unpackOneRowOfRGBA4444ToRGBA8(source.data(), destination.data(), pixelsPerRow); | ~~~~~~~~~~~^~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:116:67: note: initializing argument 1 of ‘void WebCore::SIMD::unpackOneRowOfRGBA4444ToRGBA8(const uint16_t*&, uint8_t*&, unsigned int&)’ 116 | ALWAYS_INLINE void unpackOneRowOfRGBA4444ToRGBA8(const uint16_t*& source, uint8_t*& destination, unsigned& pixelsPerRow) | ~~~~~~~~~~~~~~~~~^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp: In function ‘void WebCore::unpack(std::span<const CharacterTypeB>, std::span<DstType>, unsigned int) [with GraphicsContextGL::DataFormat format = WebCore::GraphicsContextGL::DataFormat::RGB565; SourceType = short unsigned int; DstType = unsigned char]’: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:474:39: error: invalid initialization of reference of type ‘const uint16_t*&’ {aka ‘const short unsigned int*&’} from expression of type ‘std::span<const short unsigned int>’ 474 | SIMD::unpackOneRowOfRGB565ToRGBA8(source, destination, pixelsPerRow); | ^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:236:65: note: in passing argument 1 of ‘void WebCore::SIMD::unpackOneRowOfRGB565ToRGBA8(const uint16_t*&, uint8_t*&, unsigned int&)’ 236 | ALWAYS_INLINE void unpackOneRowOfRGB565ToRGBA8(const uint16_t*& source, uint8_t*& destination, unsigned& pixelsPerRow) | ~~~~~~~~~~~~~~~~~^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp: In function ‘void WebCore::pack(std::span<const SourceType>, std::span<DstType>, unsigned int) [with GraphicsContextGL::DataFormat format = WebCore::GraphicsContextGL::DataFormat::RGBA4444; int alphaOp = 0; SourceType = unsigned char; DstType = short unsigned int]’: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:667:48: error: invalid initialization of reference of type ‘const uint8_t*&’ {aka ‘const unsigned char*&’} from expression of type ‘std::span<const unsigned char>’ 667 | SIMD::packOneRowOfRGBA8ToUnsignedShort4444(source, destination, pixelsPerRow); | ^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:144:73: note: in passing argument 1 of ‘void WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort4444(const uint8_t*&, uint16_t*&, unsigned int&)’ 144 | ALWAYS_INLINE void packOneRowOfRGBA8ToUnsignedShort4444(const uint8_t*& source, uint16_t*& destination, unsigned& pixelsPerRow) | ~~~~~~~~~~~~~~~~^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp: In function ‘void WebCore::pack(std::span<const SourceType>, std::span<DstType>, unsigned int) [with GraphicsContextGL::DataFormat format = WebCore::GraphicsContextGL::DataFormat::RGBA5551; int alphaOp = 0; SourceType = unsigned char; DstType = short unsigned int]’: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:715:48: error: invalid initialization of reference of type ‘const uint8_t*&’ {aka ‘const unsigned char*&’} from expression of type ‘std::span<const unsigned char>’ 715 | SIMD::packOneRowOfRGBA8ToUnsignedShort5551(source, destination, pixelsPerRow); | ^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:204:73: note: in passing argument 1 of ‘void WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort5551(const uint8_t*&, uint16_t*&, unsigned int&)’ 204 | ALWAYS_INLINE void packOneRowOfRGBA8ToUnsignedShort5551(const uint8_t*& source, uint16_t*& destination, unsigned& pixelsPerRow) | ~~~~~~~~~~~~~~~~^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp: In function ‘void WebCore::pack(std::span<const SourceType>, std::span<DstType>, unsigned int) [with GraphicsContextGL::DataFormat format = WebCore::GraphicsContextGL::DataFormat::RGB565; int alphaOp = 0; SourceType = unsigned char; DstType = short unsigned int]’: /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/FormatConverter.cpp:763:47: error: invalid initialization of reference of type ‘const uint8_t*&’ {aka ‘const unsigned char*&’} from expression of type ‘std::span<const unsigned char>’ 763 | SIMD::packOneRowOfRGBA8ToUnsignedShort565(source, destination, pixelsPerRow); | ^~~~~~ /home/buildbot/worker/WPE-Linux-RPi4-32bits-Mesa-Release-Perf-Build/build/Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:268:72: note: in passing argument 1 of ‘void WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort565(const uint8_t*&, uint16_t*&, unsigned int&)’ 268 | ALWAYS_INLINE void packOneRowOfRGBA8ToUnsignedShort565(const uint8_t*& source, uint16_t*& destination, unsigned& pixelsPerRow) | ~~~~~~~~~~~~~~~~^~~~~~
Attachments
Carlos Alberto Lopez Perez
Comment 1 2025-01-24 11:03:46 PST
EWS
Comment 2 2025-01-25 05:14:56 PST
Committed 289386@main (3ffbaf9c98fd): <https://commits.webkit.org/289386@main> Reviewed commits have been landed. Closing PR #39506 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.