REGRESSION(289119@main)[WPE]: Build broken on ARM 32-bits https://bugs.webkit.org/show_bug.cgi?id=286489

Reviewed by Chris Dumez.

The SIMD optimized functions on GraphicsContextGLNEON.h
before 289119@main were receiving a reference to the
pointer and modifying both the contents pointed
by the pointer as well as the pointer itself (its address)

To recover back that behaviour we need to pass now a reference
to the std::span object instead of the raw pointer.

* Source/WebCore/platform/graphics/FormatConverter.cpp:
(WebCore::uint8_t>):
* Source/WebCore/platform/graphics/cpu/arm/GraphicsContextGLNEON.h:
(WebCore::SIMD::unpackOneRowOfRGBA16LittleToRGBA8):
(WebCore::SIMD::unpackOneRowOfRGB16LittleToRGBA8):
(WebCore::SIMD::unpackOneRowOfARGB16LittleToRGBA8):
(WebCore::SIMD::unpackOneRowOfBGRA16LittleToRGBA8):
(WebCore::SIMD::unpackOneRowOfRGBA4444ToRGBA8):
(WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort4444):
(WebCore::SIMD::unpackOneRowOfRGBA5551ToRGBA8):
(WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort5551):
(WebCore::SIMD::unpackOneRowOfRGB565ToRGBA8):
(WebCore::SIMD::packOneRowOfRGBA8ToUnsignedShort565):

Canonical link: https://commits.webkit.org/289386@main